--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
     <title>Rene's News Article NLP App</title>
   </head>
   <body>
+    <main>
+    </main>
   </body>
 </html>
