--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -7,5 +7,14 @@
     <title>Rene's News Article NLP App</title>
   </head>
   <body>
+    <script>
+      // Check that service workers are supported
+      if ('serviceWorker' in navigator) {
+        // Use the window load event to keep the page load performant
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js');
+        });
+      }
+    </script>      
   </body>
 </html>
